--- a/intro-html/index.html
+++ b/intro-html/index.html
@@ -7,7 +7,33 @@
     </head>
  
     <body>
-    
+            <h1>Hello!</h1>
+            <p>Je m'appel Ariel.J'aime la bouff et la technologie.Voici une photo de moi
+            </p>
+
+            <img src="q.jpg" alt="moi">
+
+            <div>
+                <p>Mes centres dinteret</p>
+                    <ul>
+                        <li>La programmation</li>
+                        <li>Les voyages</li>
+                    </ul>
+            </div>
+
+            <div>
+                <p>Mes series préférées</p>
+                    <ul>
+                        <li>Lucifer</li>
+                        <li>Bull</li>
+                    </ul>
+            </div>
+
+
+            
+
+
+
     </body>
 
 </html>
