Ajouter le fichier index.html

--- a/intro-html/index.html
+++ b/intro-html/index.html
@@ -8,8 +8,9 @@
  
     <body>
             <h1>Hello!</h1>
-            <p>Je m'appel Ariel.J'aime la bouff et la technologie.Voici une photo de moi
-            </p>
+            <p>Je m'appel Ariel.</p>
+            <p>J'aime la bouff et la technologie.</p>
+            <p>Voici une photo de moi</p>
 
             <img src="q.jpg" alt="moi">
 
